# Rag-Agent

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
Backend/: ChatBot.py  DocReader.py  History.py  Prompts.py  Rag.py  SessionManager.py  Streaming.py  Tools.py  VoiceAgent.py  checking.py  main.py
Backend/faiss_index/: index.faiss  index.pkl
frontend/: package-lock.json  package.json
frontend/src/app/: layout.js  page.js
frontend/src/app/components/ChatWindow/: Chat.jsx
frontend/src/app/components/Sidebar/: Sidebar.jsx
