[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "git-filter-repo>=2.47.0",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.7",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
